examples/invalid/types/consttypes.mcl

void main() {
    int x = 5;
    const int y = x + 4;
}